QEMU 10 ; automate helpers (light on our feet now)

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -54,7 +54,7 @@ else()
   endforeach()
 endif()
 
-function(tool_for_arch arch arch_extra_cflags qemu_objs)
+function(tool_for_arch arch arch_extra_cflags qemu_build_dir)
   string(TOUPPER "${arch}" uc_arch)
 
   add_llvm_tool(jove-${arch}
@@ -141,21 +141,14 @@ function(tool_for_arch arch arch_extra_cflags qemu_objs)
   )
 
   target_link_libraries(jove-${arch} PRIVATE
-    ${qemu_objs}
+    -Wl,--push-state,--whole-archive
+    ${qemu_build_dir}/libqemu4jove-${arch}.a
+    -Wl,--pop-state
 
-    -Wl,--whole-archive
-    ${JOVE_SRC_DIR}/qemu/${JOVE_QEMU_BUILD_DIR_NAME}/libhwcore.fa
-    ${JOVE_SRC_DIR}/qemu/${JOVE_QEMU_BUILD_DIR_NAME}/libqom.fa
-    ${JOVE_SRC_DIR}/qemu/${JOVE_QEMU_BUILD_DIR_NAME}/libevent-loop-base.a
-    ${JOVE_SRC_DIR}/qemu/${JOVE_QEMU_BUILD_DIR_NAME}/gdbstub/libgdb_user.fa
-    -Wl,--no-whole-archive
-    ${JOVE_SRC_DIR}/qemu/${JOVE_QEMU_BUILD_DIR_NAME}/libqemuutil.a
-    ${JOVE_SRC_DIR}/qemu/${JOVE_QEMU_BUILD_DIR_NAME}/tcg/libtcg_user.fa
-    ${JOVE_SRC_DIR}/qemu/${JOVE_QEMU_BUILD_DIR_NAME}/libhwcore.fa
-    ${JOVE_SRC_DIR}/qemu/${JOVE_QEMU_BUILD_DIR_NAME}/libqom.fa
-    ${JOVE_SRC_DIR}/qemu/${JOVE_QEMU_BUILD_DIR_NAME}/gdbstub/libgdb_user.fa
+    -pthread
     ffi
     glib-2.0
+
     atomic
     zlibstatic
   )
@@ -251,448 +244,6 @@ else()
   set(JOVE_QEMU_BUILD_DIR_NAME "build")
 endif()
 
-set(JOVE_x86_64_qemu_objs_1
-  hw_core_cpu-common.c.o
-  hw_core_machine-smp.c.o
-  gdbstub_syscalls.c.o
-  cpus-common.c.o
-  page-vary-common.c.o
-  disas_disas.c.o
-  accel_accel-user.c.o
-  common-user_safe-syscall.S.o
-  common-user_safe-syscall-error.c.o
-)
-list(TRANSFORM JOVE_x86_64_qemu_objs_1 PREPEND ${JOVE_SRC_DIR}/qemu/${JOVE_QEMU_BUILD_DIR_NAME}/libcommon.fa.p/)
-
-set(JOVE_x86_64_qemu_objs_2
-  target_i386_tcg_user_excp_helper.c.o
-  target_i386_tcg_user_seg_helper.c.o
-  linux-user_x86_64_signal.c.o
-  linux-user_x86_64_cpu_loop.c.o
-  target_i386_cpu.c.o
-  target_i386_gdbstub.c.o
-  target_i386_helper.c.o
-  target_i386_xsave_helper.c.o
-  target_i386_cpu-dump.c.o
-  target_i386_kvm_kvm-stub.c.o
-  target_i386_tcg_bpt_helper.c.o
-  target_i386_tcg_cc_helper.c.o
-  target_i386_tcg_excp_helper.c.o
-  target_i386_tcg_fpu_helper.c.o
-  target_i386_tcg_int_helper.c.o
-  target_i386_tcg_mem_helper.c.o
-  target_i386_tcg_misc_helper.c.o
-  target_i386_tcg_mpx_helper.c.o
-  target_i386_tcg_seg_helper.c.o
-  target_i386_tcg_tcg-cpu.c.o
-  target_i386_tcg_translate.c.o
-  trace_control-target.c.o
-  gdbstub_user-target.c.o
-  cpu.c.o
-  page-vary.c.o
-  fpu_softfloat.c.o
-  accel_accel-common.c.o
-  accel_accel-blocker.c.o
-  accel_tcg_tcg-all.c.o
-  accel_tcg_cpu-exec-common.c.o
-  accel_tcg_cpu-exec.c.o
-  accel_tcg_tb-maint.c.o
-  accel_tcg_tcg-runtime-gvec.c.o
-  accel_tcg_tcg-runtime.c.o
-  accel_tcg_translate-all.c.o
-  accel_tcg_translator.c.o
-  accel_tcg_user-exec.c.o
-  accel_tcg_user-exec-stub.c.o
-  accel_tcg_perf.c.o
-  linux-user_elfload.c.o
-  linux-user_exit.c.o
-  linux-user_fd-trans.c.o
-  linux-user_linuxload.c.o
-  linux-user_main.c.o
-  linux-user_mmap.c.o
-  linux-user_signal.c.o
-  linux-user_strace.c.o
-  linux-user_syscall.c.o
-  linux-user_thunk.c.o
-  linux-user_uaccess.c.o
-  linux-user_uname.c.o
-  meson-generated_.._x86_64-linux-user-gdbstub-xml.c.o
-)
-list(TRANSFORM JOVE_x86_64_qemu_objs_2 PREPEND ${JOVE_SRC_DIR}/qemu/${JOVE_QEMU_BUILD_DIR_NAME}/libqemu-x86_64-linux-user.fa.p/)
-
-set(JOVE_i386_qemu_objs_1
-  hw_core_cpu-common.c.o
-  hw_core_machine-smp.c.o
-  gdbstub_syscalls.c.o
-  cpus-common.c.o
-  page-vary-common.c.o
-  disas_disas.c.o
-  accel_accel-user.c.o
-  common-user_safe-syscall.S.o
-  common-user_safe-syscall-error.c.o
-)
-list(TRANSFORM JOVE_i386_qemu_objs_1 PREPEND ${JOVE_SRC_DIR}/qemu/${JOVE_QEMU_BUILD_DIR_NAME}/libcommon.fa.p/)
-
-set(JOVE_i386_qemu_objs_2
-  target_i386_tcg_user_excp_helper.c.o
-  target_i386_tcg_user_seg_helper.c.o
-  linux-user_i386_signal.c.o
-  linux-user_i386_cpu_loop.c.o
-  target_i386_cpu.c.o
-  target_i386_gdbstub.c.o
-  target_i386_helper.c.o
-  target_i386_xsave_helper.c.o
-  target_i386_cpu-dump.c.o
-  target_i386_kvm_kvm-stub.c.o
-  target_i386_tcg_bpt_helper.c.o
-  target_i386_tcg_cc_helper.c.o
-  target_i386_tcg_excp_helper.c.o
-  target_i386_tcg_fpu_helper.c.o
-  target_i386_tcg_int_helper.c.o
-  target_i386_tcg_mem_helper.c.o
-  target_i386_tcg_misc_helper.c.o
-  target_i386_tcg_mpx_helper.c.o
-  target_i386_tcg_seg_helper.c.o
-  target_i386_tcg_tcg-cpu.c.o
-  target_i386_tcg_translate.c.o
-  trace_control-target.c.o
-  gdbstub_user-target.c.o
-  cpu.c.o
-  page-vary.c.o
-  fpu_softfloat.c.o
-  accel_accel-common.c.o
-  accel_accel-blocker.c.o
-  accel_tcg_tcg-all.c.o
-  accel_tcg_cpu-exec-common.c.o
-  accel_tcg_cpu-exec.c.o
-  accel_tcg_tb-maint.c.o
-  accel_tcg_tcg-runtime-gvec.c.o
-  accel_tcg_tcg-runtime.c.o
-  accel_tcg_translate-all.c.o
-  accel_tcg_translator.c.o
-  accel_tcg_user-exec.c.o
-  accel_tcg_user-exec-stub.c.o
-  accel_tcg_perf.c.o
-  linux-user_elfload.c.o
-  linux-user_exit.c.o
-  linux-user_fd-trans.c.o
-  linux-user_linuxload.c.o
-  linux-user_main.c.o
-  linux-user_mmap.c.o
-  linux-user_signal.c.o
-  linux-user_strace.c.o
-  linux-user_syscall.c.o
-  linux-user_thunk.c.o
-  linux-user_uaccess.c.o
-  linux-user_uname.c.o
-  linux-user_vm86.c.o
-  meson-generated_.._i386-linux-user-gdbstub-xml.c.o
-)
-
-list(TRANSFORM JOVE_i386_qemu_objs_2 PREPEND ${JOVE_SRC_DIR}/qemu/${JOVE_QEMU_BUILD_DIR_NAME}/libqemu-i386-linux-user.fa.p/)
-
-set(JOVE_mipsel_qemu_objs_1
-  hw_core_cpu-common.c.o
-  hw_core_machine-smp.c.o
-  gdbstub_syscalls.c.o
-  cpus-common.c.o
-  page-vary-common.c.o
-  disas_mips.c.o
-  disas_nanomips.c.o
-  disas_disas.c.o
-  accel_accel-user.c.o
-  common-user_safe-syscall.S.o
-  common-user_safe-syscall-error.c.o
-)
-list(TRANSFORM JOVE_mipsel_qemu_objs_1 PREPEND ${JOVE_SRC_DIR}/qemu/${JOVE_QEMU_BUILD_DIR_NAME}/libcommon.fa.p/)
-
-set(JOVE_mipsel_qemu_objs_2
-  linux-user_mips_signal.c.o
-  linux-user_mips_cpu_loop.c.o
-  target_mips_cpu.c.o
-  target_mips_fpu.c.o
-  target_mips_gdbstub.c.o
-  target_mips_msa.c.o
-  target_mips_tcg_dsp_helper.c.o
-  target_mips_tcg_exception.c.o
-  target_mips_tcg_fpu_helper.c.o
-  target_mips_tcg_ldst_helper.c.o
-  target_mips_tcg_lmmi_helper.c.o
-  target_mips_tcg_msa_helper.c.o
-  target_mips_tcg_msa_translate.c.o
-  target_mips_tcg_op_helper.c.o
-  target_mips_tcg_rel6_translate.c.o
-  target_mips_tcg_translate.c.o
-  target_mips_tcg_translate_addr_const.c.o
-  target_mips_tcg_txx9_translate.c.o
-  target_mips_tcg_vr54xx_helper.c.o
-  target_mips_tcg_vr54xx_translate.c.o
-  target_mips_tcg_mxu_translate.c.o
-  trace_control-target.c.o
-  gdbstub_user-target.c.o
-  cpu.c.o
-  page-vary.c.o
-  fpu_softfloat.c.o
-  accel_accel-common.c.o
-  accel_accel-blocker.c.o
-  accel_tcg_tcg-all.c.o
-  accel_tcg_cpu-exec-common.c.o
-  accel_tcg_cpu-exec.c.o
-  accel_tcg_tb-maint.c.o
-  accel_tcg_tcg-runtime-gvec.c.o
-  accel_tcg_tcg-runtime.c.o
-  accel_tcg_translate-all.c.o
-  accel_tcg_translator.c.o
-  accel_tcg_user-exec.c.o
-  accel_tcg_user-exec-stub.c.o
-  accel_tcg_perf.c.o
-  linux-user_elfload.c.o
-  linux-user_exit.c.o
-  linux-user_fd-trans.c.o
-  linux-user_linuxload.c.o
-  linux-user_main.c.o
-  linux-user_mmap.c.o
-  linux-user_signal.c.o
-  linux-user_strace.c.o
-  linux-user_syscall.c.o
-  linux-user_thunk.c.o
-  linux-user_uaccess.c.o
-  linux-user_uname.c.o
-)
-
-list(TRANSFORM JOVE_mipsel_qemu_objs_2 PREPEND ${JOVE_SRC_DIR}/qemu/${JOVE_QEMU_BUILD_DIR_NAME}/libqemu-mipsel-linux-user.fa.p/)
-
-set(JOVE_mips_qemu_objs_1
-  hw_core_cpu-common.c.o
-  hw_core_machine-smp.c.o
-  gdbstub_syscalls.c.o
-  cpus-common.c.o
-  page-vary-common.c.o
-  disas_mips.c.o
-  disas_nanomips.c.o
-  disas_disas.c.o
-  accel_accel-user.c.o
-  common-user_safe-syscall.S.o
-  common-user_safe-syscall-error.c.o
-)
-list(TRANSFORM JOVE_mips_qemu_objs_1 PREPEND ${JOVE_SRC_DIR}/qemu/${JOVE_QEMU_BUILD_DIR_NAME}/libcommon.fa.p/)
-
-set(JOVE_mips_qemu_objs_2
-  linux-user_mips_signal.c.o
-  linux-user_mips_cpu_loop.c.o
-  target_mips_cpu.c.o
-  target_mips_fpu.c.o
-  target_mips_gdbstub.c.o
-  target_mips_msa.c.o
-  target_mips_tcg_dsp_helper.c.o
-  target_mips_tcg_exception.c.o
-  target_mips_tcg_fpu_helper.c.o
-  target_mips_tcg_ldst_helper.c.o
-  target_mips_tcg_lmmi_helper.c.o
-  target_mips_tcg_msa_helper.c.o
-  target_mips_tcg_msa_translate.c.o
-  target_mips_tcg_op_helper.c.o
-  target_mips_tcg_rel6_translate.c.o
-  target_mips_tcg_translate.c.o
-  target_mips_tcg_translate_addr_const.c.o
-  target_mips_tcg_txx9_translate.c.o
-  target_mips_tcg_vr54xx_helper.c.o
-  target_mips_tcg_vr54xx_translate.c.o
-  target_mips_tcg_mxu_translate.c.o
-  trace_control-target.c.o
-  gdbstub_user-target.c.o
-  cpu.c.o
-  page-vary.c.o
-  fpu_softfloat.c.o
-  accel_accel-common.c.o
-  accel_accel-blocker.c.o
-  accel_tcg_tcg-all.c.o
-  accel_tcg_cpu-exec-common.c.o
-  accel_tcg_cpu-exec.c.o
-  accel_tcg_tb-maint.c.o
-  accel_tcg_tcg-runtime-gvec.c.o
-  accel_tcg_tcg-runtime.c.o
-  accel_tcg_translate-all.c.o
-  accel_tcg_translator.c.o
-  accel_tcg_user-exec.c.o
-  accel_tcg_user-exec-stub.c.o
-  accel_tcg_perf.c.o
-  linux-user_elfload.c.o
-  linux-user_exit.c.o
-  linux-user_fd-trans.c.o
-  linux-user_linuxload.c.o
-  linux-user_main.c.o
-  linux-user_mmap.c.o
-  linux-user_signal.c.o
-  linux-user_strace.c.o
-  linux-user_syscall.c.o
-  linux-user_thunk.c.o
-  linux-user_uaccess.c.o
-  linux-user_uname.c.o
-)
-list(TRANSFORM JOVE_mips_qemu_objs_2 PREPEND ${JOVE_SRC_DIR}/qemu/${JOVE_QEMU_BUILD_DIR_NAME}/libqemu-mips-linux-user.fa.p/)
-
-set(JOVE_mips64el_qemu_objs_1
-  hw_core_cpu-common.c.o
-  hw_core_machine-smp.c.o
-  gdbstub_syscalls.c.o
-  cpus-common.c.o
-  page-vary-common.c.o
-  disas_mips.c.o
-  disas_nanomips.c.o
-  disas_disas.c.o
-  accel_accel-user.c.o
-  common-user_safe-syscall.S.o
-  common-user_safe-syscall-error.c.o
-)
-list(TRANSFORM JOVE_mips64el_qemu_objs_1 PREPEND ${JOVE_SRC_DIR}/qemu/${JOVE_QEMU_BUILD_DIR_NAME}/libcommon.fa.p/)
-
-set(JOVE_mips64el_qemu_objs_2
-  linux-user_mips64_signal.c.o
-  linux-user_mips64_cpu_loop.c.o
-  target_mips_cpu.c.o
-  target_mips_fpu.c.o
-  target_mips_gdbstub.c.o
-  target_mips_msa.c.o
-  target_mips_tcg_dsp_helper.c.o
-  target_mips_tcg_exception.c.o
-  target_mips_tcg_fpu_helper.c.o
-  target_mips_tcg_ldst_helper.c.o
-  target_mips_tcg_lmmi_helper.c.o
-  target_mips_tcg_msa_helper.c.o
-  target_mips_tcg_msa_translate.c.o
-  target_mips_tcg_op_helper.c.o
-  target_mips_tcg_rel6_translate.c.o
-  target_mips_tcg_translate.c.o
-  target_mips_tcg_translate_addr_const.c.o
-  target_mips_tcg_txx9_translate.c.o
-  target_mips_tcg_vr54xx_helper.c.o
-  target_mips_tcg_vr54xx_translate.c.o
-  target_mips_tcg_tx79_translate.c.o
-  target_mips_tcg_octeon_translate.c.o
-  trace_control-target.c.o
-  gdbstub_user-target.c.o
-  cpu.c.o
-  page-vary.c.o
-  fpu_softfloat.c.o
-  accel_accel-common.c.o
-  accel_accel-blocker.c.o
-  accel_tcg_tcg-all.c.o
-  accel_tcg_cpu-exec-common.c.o
-  accel_tcg_cpu-exec.c.o
-  accel_tcg_tb-maint.c.o
-  accel_tcg_tcg-runtime-gvec.c.o
-  accel_tcg_tcg-runtime.c.o
-  accel_tcg_translate-all.c.o
-  accel_tcg_translator.c.o
-  accel_tcg_user-exec.c.o
-  accel_tcg_user-exec-stub.c.o
-  accel_tcg_perf.c.o
-  linux-user_elfload.c.o
-  linux-user_exit.c.o
-  linux-user_fd-trans.c.o
-  linux-user_linuxload.c.o
-  linux-user_main.c.o
-  linux-user_mmap.c.o
-  linux-user_signal.c.o
-  linux-user_strace.c.o
-  linux-user_syscall.c.o
-  linux-user_thunk.c.o
-  linux-user_uaccess.c.o
-  linux-user_uname.c.o
-)
-list(TRANSFORM JOVE_mips64el_qemu_objs_2 PREPEND ${JOVE_SRC_DIR}/qemu/${JOVE_QEMU_BUILD_DIR_NAME}/libqemu-mips64el-linux-user.fa.p/)
-
-set(JOVE_aarch64_qemu_objs_1
-  hw_core_cpu-common.c.o
-  hw_core_machine-smp.c.o
-  gdbstub_syscalls.c.o
-  cpus-common.c.o
-  page-vary-common.c.o
-  disas_disas.c.o
-  accel_accel-user.c.o
-  common-user_safe-syscall.S.o
-  common-user_safe-syscall-error.c.o
-)
-list(TRANSFORM JOVE_aarch64_qemu_objs_1 PREPEND ${JOVE_SRC_DIR}/qemu/${JOVE_QEMU_BUILD_DIR_NAME}/libcommon.fa.p/)
-
-set(JOVE_aarch64_qemu_objs_2
-  linux-user_aarch64_signal.c.o
-  linux-user_aarch64_cpu_loop.c.o
-  target_arm_cpu.c.o
-  target_arm_debug_helper.c.o
-  target_arm_gdbstub.c.o
-  target_arm_helper.c.o
-  target_arm_vfp_helper.c.o
-  target_arm_kvm-stub.c.o
-  target_arm_cpu64.c.o
-  target_arm_gdbstub64.c.o
-  target_arm_tcg_cpu32.c.o
-  target_arm_tcg_translate.c.o
-  target_arm_tcg_translate-m-nocp.c.o
-  target_arm_tcg_translate-mve.c.o
-  target_arm_tcg_translate-neon.c.o
-  target_arm_tcg_translate-vfp.c.o
-  target_arm_tcg_crypto_helper.c.o
-  target_arm_tcg_hflags.c.o
-  target_arm_tcg_iwmmxt_helper.c.o
-  target_arm_tcg_m_helper.c.o
-  target_arm_tcg_mve_helper.c.o
-  target_arm_tcg_neon_helper.c.o
-  target_arm_tcg_op_helper.c.o
-  target_arm_tcg_tlb_helper.c.o
-  target_arm_tcg_vec_helper.c.o
-  target_arm_tcg_cpu64.c.o
-  target_arm_tcg_translate-a64.c.o
-  target_arm_tcg_translate-sve.c.o
-  target_arm_tcg_translate-sme.c.o
-  target_arm_tcg_helper-a64.c.o
-  target_arm_tcg_mte_helper.c.o
-  target_arm_tcg_pauth_helper.c.o
-  target_arm_tcg_sme_helper.c.o
-  target_arm_tcg_sve_helper.c.o
-  trace_control-target.c.o
-  gdbstub_user-target.c.o
-  cpu.c.o
-  page-vary.c.o
-  semihosting_guestfd.c.o
-  semihosting_syscalls.c.o
-  semihosting_arm-compat-semi.c.o
-  fpu_softfloat.c.o
-  accel_accel-common.c.o
-  accel_accel-blocker.c.o
-  accel_tcg_tcg-all.c.o
-  accel_tcg_cpu-exec-common.c.o
-  accel_tcg_cpu-exec.c.o
-  accel_tcg_tb-maint.c.o
-  accel_tcg_tcg-runtime-gvec.c.o
-  accel_tcg_tcg-runtime.c.o
-  accel_tcg_translate-all.c.o
-  accel_tcg_translator.c.o
-  accel_tcg_user-exec.c.o
-  accel_tcg_user-exec-stub.c.o
-  accel_tcg_perf.c.o
-  linux-user_elfload.c.o
-  linux-user_exit.c.o
-  linux-user_fd-trans.c.o
-  linux-user_linuxload.c.o
-  linux-user_main.c.o
-  linux-user_mmap.c.o
-  linux-user_signal.c.o
-  linux-user_strace.c.o
-  linux-user_syscall.c.o
-  linux-user_thunk.c.o
-  linux-user_uaccess.c.o
-  linux-user_uname.c.o
-  linux-user_flatload.c.o
-  linux-user_semihost.c.o
-  meson-generated_.._aarch64-linux-user-gdbstub-xml.c.o
-)
-list(TRANSFORM JOVE_aarch64_qemu_objs_2 PREPEND ${JOVE_SRC_DIR}/qemu/${JOVE_QEMU_BUILD_DIR_NAME}/libqemu-aarch64-linux-user.fa.p/)
-
 foreach(arch ${JOVE_TARGETS_TO_BUILD})
-  set(${arch}_qemu_objs "")
-  list(APPEND ${arch}_qemu_objs ${JOVE_${arch}_qemu_objs_1})
-  list(APPEND ${arch}_qemu_objs ${JOVE_${arch}_qemu_objs_2})
-  tool_for_arch("${arch}" "${JOVE_${arch}_extra_cflags}" "${${arch}_qemu_objs}")
+  tool_for_arch("${arch}" "${JOVE_${arch}_extra_cflags}" "${JOVE_SRC_DIR}/qemu/${JOVE_QEMU_BUILD_DIR_NAME}")
 endforeach()
