bootstrap: style (ptrace.h)

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -81,6 +81,7 @@ function(tool_for_arch arch arch_extra_cflags qemu_build_dir)
     ../core/perf.cpp
     ../core/pipe.cpp
     ../core/process.cpp
+    ../core/ptrace.cpp
     ../core/recovery.cpp
     ../core/reflink.cpp
     ../core/score.cpp
