bring in portable_binary_archive example from boost serialization

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -80,6 +80,8 @@ set(JOVE_SOURCES
     ../core/perf.cpp
     ../core/pipe.cpp
     ../core/process.cpp
+    ../core/portable_binary_iarchive.cpp
+    ../core/portable_binary_oarchive.cpp
     ../core/ptrace.cpp
     ../core/recovery.cpp
     ../core/recompile.cpp
