--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,19 +26,25 @@ else()
   jove_add_boost()
 endif()
 
+option(JOVE_USE_SYSTEM_TBB "Use system or vendored TBB" OFF)
+
 if(NOT CMAKE_SYSTEM_PROCESSOR MATCHES "^(mips|mipsel|mips64el)$")
-  function(jove_add_tbb)
-    # this is so tbb/src/tbb/semaphore.h doesn't include itself...
-    set(CMAKE_INCLUDE_CURRENT_DIR OFF)
+  if(JOVE_USE_SYSTEM_TBB)
+    find_package(TBB REQUIRED)
+  else()
+    function(jove_add_tbb)
+      # this is so tbb/src/tbb/semaphore.h doesn't include itself...
+      set(CMAKE_INCLUDE_CURRENT_DIR OFF)
 
-    set(BUILD_SHARED_LIBS OFF)
-    set(TBB_TEST OFF CACHE INTERNAL "")
-    set(TBB_STRICT OFF CACHE INTERNAL "")
-    add_subdirectory(oneTBB EXCLUDE_FROM_ALL)
-    target_compile_definitions(tbb PRIVATE __TBB_DYNAMIC_LOAD_ENABLED=0)
-  endfunction()
+      set(BUILD_SHARED_LIBS OFF)
+      set(TBB_TEST OFF CACHE INTERNAL "")
+      set(TBB_STRICT OFF CACHE INTERNAL "")
+      add_subdirectory(oneTBB EXCLUDE_FROM_ALL)
+      target_compile_definitions(tbb PRIVATE __TBB_DYNAMIC_LOAD_ENABLED=0)
+    endfunction()
 
-  jove_add_tbb()
+    jove_add_tbb()
+  endif()
 endif()
 
 if (CMAKE_SYSTEM_PROCESSOR MATCHES "^(x86|i[3-6]86|x86_64)$")
