Makefile: oh god it has been discovered that asm offsets are different for linux and windows targets

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ tags
 /bin/*/*.s
 /bin/*/*.so
 /bin/*/*.tmp
-/bin/*/asm-offsets.h
+/bin/*/asm-offsets-*.h
 /bin/*/linux.copy.h
 /bin/*/tcgconstants.h
 /bin/*/tcgconstants.*.h
