it has been discovered that passing -mms-bitfields to clang when building QEMU softfpu is crucial for the recompiled code to work. helpers: build once for each platform (linux and windows), on every architecture. furthermore, bin/<ARCH>/env_init now has similarly two versions- env_init.linux and env_init.win, since, the size and layout of the CPUArchState may be different if produced with clang passed -mms-bitfields.

--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,10 @@ tags
 /bin/*/qemu.tcg.copy.h
 /bin/*/qemu.tcg.copy.*.h
 /bin/*/helpers/*.c
-/bin/*/helpers/*.bc
-/bin/*/helpers/*.bc.*
-/bin/*/helpers/*.ll
-/bin/*/helpers/*.d
+/bin/*/helpers/*/*.bc
+/bin/*/helpers/*/*.bc.*
+/bin/*/helpers/*/*.ll
+/bin/*/helpers/*/*.d
 /bin/*/*.o
 /bin/*/*.dll
 /bin/*/*.lib
@@ -24,8 +24,8 @@ tags
 /bin/*/qemu-starter.inc
 /bin/*/dump-vdso
 /bin/*/dump-vdso.inc
-/bin/*/env_init.inc
-/bin/*/env_init
+/bin/*/env_init.*.inc
+/bin/*/env_init.*
 /bin/*/all_helpers.mk
 tests/.t/*
 tests/__pycache__/*
