--- a/.gitmodules
+++ b/.gitmodules
@@ -38,3 +38,6 @@
 [submodule "zlib"]
 	path = zlib
 	url = https://github.com/madler/zlib.git
+[submodule "winetricks"]
+	path = winetricks
+	url = https://github.com/Winetricks/winetricks.git
