--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@ endif()
 
 option(JOVE_HAVE_MEMFD "memfd_create(2) exists, implies Linux >= 3.17" OFF)
 
+# we are *not* using libc++, so the following should be O.K.
+add_definitions(-DBOOST_STACKTRACE_LIBCXX_RUNTIME_MAY_CAUSE_MEMORY_LEAK)
+
 # Find boost.
 #
 # By default, we build a bundled one and statically-link the library
@@ -18,7 +21,12 @@ else()
   function(jove_add_boost)
     set(BUILD_SHARED_LIBS OFF)
     set(BUILD_TESTING OFF)
-    set(BOOST_INCLUDE_LIBRARIES system filesystem serialization interprocess dll graph format icl lockfree)
+    set(BOOST_INCLUDE_LIBRARIES system filesystem serialization interprocess dll graph format icl lockfree stacktrace)
+    set(BOOST_STACKTRACE_ENABLE_BACKTRACE      ON  CACHE BOOL "" FORCE)
+    set(BOOST_STACKTRACE_ENABLE_FROM_EXCEPTION ON  CACHE BOOL "" FORCE)
+    set(BOOST_STACKTRACE_ENABLE_ADDR2LINE      OFF CACHE BOOL "" FORCE)
+    set(BOOST_STACKTRACE_ENABLE_NOOP           OFF CACHE BOOL "" FORCE)
+    set(BOOST_STACKTRACE_ENABLE_BASIC          OFF CACHE BOOL "" FORCE)
     add_subdirectory(boost EXCLUDE_FROM_ALL)
     #target_compile_definitions(boost PRIVATE BOOST_NO_RTTI)
   endfunction()
