loop,run: instead of using named fifo, use shared memory. this is a better solution since it can't lead to indefinitely blocking on opening a fifo ; refactor signal redirection code ; refactor crash handler code

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -88,6 +88,7 @@ set(JOVE_SOURCES
     ../core/block.cpp
     ../core/calls.cpp
     ../core/coff.cpp
+    ../core/crash.cpp
     ../core/crypto.cpp
     ../core/byval.cpp
     ../core/disas.cpp
@@ -112,6 +113,7 @@ set(JOVE_SOURCES
     ../core/pidfd.cpp
     ../core/recovery.cpp
     ../core/recompile.cpp
+    ../core/redirect.cpp
     ../core/reflink.cpp
     ../core/score.cpp
     ../core/sret.cpp
